k8s/default/ingressroutes/templates/grafana-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress-default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`grafana.cavaleiro.in`)
    kind: Rule
    middlewares:
      - name: redirect-https # Aplica o redirecionamento aqui
    services:
    - name:  prometheus-kube-prometheus-stack-grafana
      namespace: prometheus
      port: 80 # O Traefik usará o DNS para resolver o ExternalName
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress-default-ssl
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`grafana.cavaleiro.in`)
    kind: Rule
    services:
    - name:  prometheus-kube-prometheus-stack-grafana
      namespace: prometheus
      port: 80 # O Traefik usará o DNS para resolver o ExternalName
  tls:
    certResolver: cloudflare
