k8s/default/ingressroutes/templates/ha-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-ingress-default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`ha.cavaleiro.in`)
    kind: Rule
    middlewares:
      - name: redirect-https # Aplica o redirecionamento aqui
    services:
    - name: home-assistant-home-assistant
      namespace: home-assistant
      port: 8123 # O Traefik usará o DNS para resolver o ExternalName
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-ingress-default-ssl
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`ha.cavaleiro.in`)
    kind: Rule
    services:
    - name: home-assistant-home-assistant
      namespace: home-assistant
      port: 8123 # O Traefik usará o DNS para resolver o ExternalName
  tls:
    certResolver: cloudflare
