k8s/default/ingressroutes/templates/prometheus-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress-default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`prom.cavaleiro.in`)
    kind: Rule
    middlewares:
      - name: redirect-https # Aplica o redirecionamento aqui
    services:
    - name:  prometheus-kube-prometheus-prometheus
      namespace: prometheus
      port: 9090 # O Traefik usará o DNS para resolver o ExternalName
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress-default-ssl
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`prom.cavaleiro.in`)
    kind: Rule
    services:
    - name:  prometheus-kube-prometheus-prometheus
      namespace: prometheus
      port: 9090 # O Traefik usará o DNS para resolver o ExternalName
  tls:
    certResolver: cloudflare
