k8s/default/ingressroutes/templates/unify-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unify-ingress-default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`unify.cavaleiro.in`)
    kind: Rule
    middlewares:
      - name: redirect-https # Aplica o redirecionamento aqui
    services:
    - name: unify-external-svc
      port: 443 # O Traefik usará o DNS para resolver o ExternalName
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unify-ingress-default-ssl
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`unify.cavaleiro.in`)
    kind: Rule
    services:
    - name:  unify-external-svc
      port: 443 # O Traefik usará o DNS para resolver o ExternalName
  tls:
    certResolver: cloudflare
